<resources>
    <string name="weather_api_key">7092cf298fade78e4c953c893df9c684</string>
    <string name="weather_base_url">https://api.openweathermap.org</string>
    <string name="app_name">Geolocation</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="reverse_geocoding">Reverse geocoding:</string>
    <string name="current_location">Current location:</string>
    <string name="weather_info">Weather info:</string>
    <string name="temp_text"> </string>
    <string name="check_weather">Check weather</string>
    <string name="weather">Weather: </string>
    <string name="temperature">Temperature: </string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure: </string>
    <string name="wind_speed">Wind speed: </string>
    <string name="clouds">Clouds:</string>
    <string name="wind_course">Wind course:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="date_and_time">Date and time:</string>
</resources>
